2008-02-24  Dan Nicolaescu  <dann@ics.uci.edu>

	* progmodes/compile.el (compilation-start): Specify a face for
	mode-line-process.
	(compilation-handle-exit): Specify a face and a tooltip for
	mode-line-process.

2008-02-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* hilit-chg.el: Remove spurious * in defcustom docstrings.
	(hilit-chg-make-ov): Simplify.
	(hilit-chg-fixup): Use remove-overlays.
	(hilit-chg-set-face-on-change): Remove redundant call to
	`remove-text-properties'.

	* dired.el (dired-mark-prompt): Don't count/display the t element.
	Reported by Carsten Blaauw <it-media.blaauw@daimler.com>.

2008-02-24  Dan Nicolaescu  <dann@ics.uci.edu>

	* progmodes/verilog-mode.el (eval-when-compile): Don't define
	add-submenu.
	(verilog-xemacs-menu): Add :keys for C-M-a, C-M-e and C-M-h.
	Remove.  Move contents to the only use ...
	(verilog-menu): ... here.
	(verilog-statement-menu): Remove.  Move contents to the only use ...
	(verilog-stmt-menu): ... here.
	(verilog-mark-defun): Simply call mark-defun for emacs.
	(occur-pos-list): Declare for byte compiler.
	(mode-popup-menu): Don't defvar.
	(verilog-add-statement-menu): Remove.
	(verilog-mode-hook): Don't add verilog-add-statement-menu.
	(verilog-mode): Call easy-menu-add and set mode-popup-menu for
	XEmacs.

2008-02-24  Michael McNamara  <mac@mail.brushroad.com>

	* progmodes/verilog-mode.el (verilog-xemacs-menu): Remove XEmacs
	conditional.
	(verilog-font-grouping-keywords-face): Make the begin..end
	keywords standout more than other verilog keywords.
        (verilog-type-font-keywords): Move the begin..end out of this list
	to facilitate making them to (potentially) stand out more.
	(verilog-backward-token): Fix indent of bare always{_*}?, initial,
	function & task blocks.
        (verilog-behavioral-block-beg-re): Fix indent of bare always{_*}?,
	initial, function & task blocks.
	(verilog-forward-sexp): Handle the new "disable fork" statement of
	IEEE-1800 Verilog.