@@ -1,3 +1,7 @@
+2008-02-24  Glenn Morris  <rgm@gnu.org>
+
+	* vc-mcvs.el (vc-mcvs-register): Fix let-binding (for use of `file').
+
 2008-02-24  Dan Nicolaescu  <dann@ics.uci.edu>
 
 	* progmodes/compile.el (compilation-start): Specify a face for
